<resources>
    <string name="app_name">ေကာင္ခံံံ့</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="developer">Product of hilllander</string>
    <string name="client">ေကာင္ခံံံ့</string>
    <string name="action_about">About us</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="logo_text_hilllander">Hilllander</string>
    <string name="logo_text_studio">studio</string>
    <string name="motto">We craft things with love</string>
    <string name="title_our_team">Our Team</string>
    <string name="label_programming">Programmer</string>
    <string name="value_of_programming">: khunzohn</string>
    <string name="label_photographer">Photographer</string>
    <string name="value_photographer">: boam boan</string>
    <string name="label_design">Designer</string>
    <string name="value_design">: Khun Kyi</string>
    <string name="client_shop_type">mobile</string>
    <string name="label_address">Address</string>
    <string name="value_address">ဆီဆိုင္လိြဳင္ေကာ္လမ္းမၾကီး၊ ဆီဆိုင္ျမိဳ႕မေစ်းၾကီး အေရွ႕ဖက္ မ်က္ႏွာစာ ၊ဆီဆိုင္ျမိဳ႕။</string>
    <string name="label_number">Phone</string>
    <string name="value_number">081-49174</string>
    <string name="made_with">Made with </string>
    <string name="by_hilllander"> by hilllander team</string>
    <string name="heart">heart</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help">Instruction</string>
    <string name="instruction_one">ဤ app ကို Install ျပဳလုပ္ၿပီးပါက မိမိ Android ဖုန္း၏  widgets စာရင္းတြင္ ဤ app  ၏ widget ကိုေတြ႕ရပါမည္။</string>
    <string name="instruction_two">app ၏ widget ကို Home Screen သို႔ဆြဲယူ ေနရာခ် ထားၿပီးလွ်င္ စတင္ အသံုးျပဳႏိုင္ပါၿပီ။</string>
    <string name="instruction_three">ယခု app ၏အဓိက လုပ္ေဆာင္ခ်က္ မ်ားမွာ ေဒသတြင္း မသိမျဖစ္ (၅)ရက္ တစ္ေစ်းႏွင့္ ႐ႈခင္းသာပံု မ်ားျဖင့္ မိမိတို႔၏ ဖုန္းမ်ား ေပၚတြင္ အလွဆင္ ႏိုင္ရန္ ယခု widget ေလးမွ လုပ္ေဆာင္ ေပးပါမည္။</string>
    <string name="hilllander_info">Hilllander is a team of enthusiastic IT geeks and artists based in Taunggyi, Myanmar.
                                   We give a good attention on design. We\'ve come up with the aim of providing
                                   digital stuffs carefully crafted by folks who love to make things those help people
                                   live their lives much smarter. </string>
    <string name="facebook">find us on facebook. \"www.facebook.com/khunzohn\"</string>
    <string name="hilllander">2015. Hilllander team.</string>
    <string name="github_info">ယခု application ၏ source code ကို GitHub တြင္တင္ ထား ပါသည္။ ေပးထားေသာ links တြင္၀င္ ျပီး
                                fork/clone ႏုိင္ပါသည္။</string>
    <string name="repository">Repository</string>
    <string name="repository_url">https://github.com/khunzohn/khaungKham.git</string>
    <string name="website">Website</string>
    <string name="website_url">http://khunzohn.github.io/khaungKham</string>
    <string name="title_activity_modifide">ModifideActivity</string>
    <string name="goto_button">go to a date</string>
    <string name="back_button">back date</string>
    <string name="next_button">next day</string>
    <string name="action_help">How to use</string>
    <string name="action_info">About us</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="founded_year">2015. Hilllander team.</string>
    <string name="client_message">ကြ်န္ေတာ္တို႔ ဆိုင္မွ ေခတ္မွီ ဆန္းသစ္ေသာ ဖုန္းမ်ားႏွင့္ ဖုန္းအပို ပစၥည္း အမ်ဳိးမ်ဳိး တို႔ကို ေစ်းႏွဳန္း ခ်ဳိသာ စြာျဖင့္ ေရာင္းခ် ေပးေနျပီး လူၾကီးမင္း မ်ား၏ ဖုန္းႏွင့္ ပက္သက္ေသာ ၀န္ေဆာင္မူ အမ်ဳိးမ်ဳိး ကိုလည္း အေကာင္းဆံုး ေဆာင္ရြက္ ေပးေနပါျပီ။</string>
    <string name="icon_set">Some icons used in this app are the official icon set from google.</string>
</resources>
