<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/market_day"
                android:layout_width="match_parent"
                android:layout_height="220dp">

            </FrameLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <ImageButton
                        android:id="@+id/back"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/market_day_nav_back_chooser"
                        android:contentDescription="@string/back_button"
                        android:src="@drawable/back"
                        android:textColor="@color/text_color" />

                    <Button
                        android:id="@+id/today"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="1dp"
                        android:layout_weight="3"
                        android:background="@drawable/market_day_nav_back_chooser"
                        android:text="today"
                        android:textColor="@color/white" />

                    <ImageButton
                        android:id="@+id/date_picker"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/market_day_nav_back_chooser"
                        android:contentDescription="@string/goto_button"
                        android:src="@drawable/go_to" />

                    <ImageButton
                        android:id="@+id/next"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/market_day_nav_back_chooser"
                        android:contentDescription="@string/next_button"
                        android:src="@drawable/next"
                        android:textColor="@color/text_color" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/khaungkham" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/client_shop_type"
                android:textColor="?attr/colorPrimary" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/frame_padding">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/frame_padding"
                android:text="@string/client_message"
                android:textColor="?attr/colorAccent"
                android:textSize="@dimen/client_message" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/frame_padding">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorPrimary" />
            </FrameLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/header_picture"
                android:layout_margin="2dp"
                android:layout_marginTop="0dp"
                android:background="@color/white"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:orientation="horizontal"
                        android:padding="4dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_address"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/value_address"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/colorPrimary"
                        android:orientation="horizontal"
                        android:padding="4dp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/label_number"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:text="@string/value_number"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:src="@drawable/dial"
        app:fabSize="normal" />-->
</android.support.design.widget.CoordinatorLayout>